--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -147,6 +147,25 @@ h6, .h6 {
   font-size: 1rem;
 }
 
+
+@media (min-width: 1200px) {
+  .quote__text {
+    font-size: 2.5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .title {
+    font-size: 1.75rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .request {
+    font-size: 1.75rem;
+  }
+}
+
 p {
   margin-top: 0;
   margin-bottom: 1rem;
